--- a/app.json
+++ b/app.json
@@ -1,6 +1,17 @@
+
 {
+  "name": "phaser_tut2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
+    "start": "node servergame/server.js",
     "postinstall": "cd servergame && npm install"
+  },
+  "author": "Scott Westover",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.0"
   }
 }
-
