--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node servergame/server.js",
+    "start": "server.js",
     "postinstall": "cd servergame && npm install"
   },
   "author": "Scott Westover",
