--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "game .js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node servergame/server.js",
     "postinstall": "cd servergame && npm install"
   },
   "author": "Scott Westover",
